// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HdButton can be used as an icon button 1`] = `
<button class="btn btn--primary btn--icon-button"><span class="btn__icon"><svg height="100%" width="100%" viewBox="222 126 53 53" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
  <path xmlns="http://www.w3.org/2000/svg" class="color1" d="M272.48 137.62L258.61 150.5L244.75 141.58L254.65 126.73L272.48 137.62Z" fill="#1895FF"></path>
  <path xmlns="http://www.w3.org/2000/svg" class="color2" d="M242.22 176.24L222.97 160.68L230.47 145.1L243.56 155.68L242.22 176.24Z" fill="#1C3553"></path>
</svg></span> <span class="btn__content"></span></button>
`;

exports[`HdButton should render component with \`btn\` class 1`] = `
<button class="btn btn--primary">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render component with btn--dark-background class if prop isInDarkBackground is true 1`] = `
<button class="btn btn--primary btn--dark-background">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render component with btn--flat class 1`] = `
<button class="btn btn--flat">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render component with btn--ghost class 1`] = `
<button class="btn btn--ghost">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render component with btn--primary class 1`] = `
<button class="btn btn--primary">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render component with btn--secondary class 1`] = `
<button class="btn btn--secondary">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render component with btn--tertiary class 1`] = `
<button class="btn btn--tertiary">
  <!----> <span class="btn__content"><span>Button text</span></span>
</button>
`;

exports[`HdButton should render the icon passed as prop 1`] = `
<button class="btn btn--primary"><span class="btn__icon"><svg height="100%" width="100%" viewBox="222 126 53 53" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
  <path xmlns="http://www.w3.org/2000/svg" class="color1" d="M272.48 137.62L258.61 150.5L244.75 141.58L254.65 126.73L272.48 137.62Z" fill="#1895FF"></path>
  <path xmlns="http://www.w3.org/2000/svg" class="color2" d="M242.22 176.24L222.97 160.68L230.47 145.1L243.56 155.68L242.22 176.24Z" fill="#1C3553"></path>
</svg></span> <span class="btn__content"><span>Button text</span></span></button>
`;
